# nonebot_plugin_vortex_lexicon

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_vortex_lexicon/: __init__.py  config.py  lexicon_service.py  models.py  permission_policy.py  query_output.py  runtime_helpers.py  scope.py
nonebot_plugin_vortex_lexicon/migrations/: 4c126bfc6e19_first_revision.py
nonebot_plugin_vortex_lexicon/template_engine_parts/: __init__.py  answer_template.py  api_action.py  assign_template.py  await_flow.py  await_template.py  constants.py  engine.py  event_field_template.py  logic_template.py  question_template.py  random_template.py  segment_field_template.py  time_template.py
